--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <button onclick="toggleAC()">ON & OFF :AC</button>
     <button onclick="increasetemp()">+ temp</button>
     <button onclick="decreasetemp()">- temp</button>
-    <button onclick="speed()">speed</button>
+    <button onclick="Speed()">Speed</button>
     <script src="./index.js"></script>
   </body>
 </html>
